<resources>
    <string name="app_name">Software Terms</string>
    <string name="title_activity_list">List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="notification_preference">notification_preference</string>
    <string name="disclaimer_preference">disclaimer_preference</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_channel_name">Daily information</string>
    <string name="notification_channel_description">Daily information notification</string>
    <string name="notification_title">Term of The Day</string>
    <string name="notification_message">Tap to learn about %1$s</string>
    <string name="item_text_source">Content: %1$s</string>
    <string name="item_image_source">Image: %1$s</string>
    <string name="favourites">Favourites</string>
    <string name="disclaimer_text">This software is provided as is without warranty of any kind, either express or implied, including but not limited to, the implied warranties of fitness for a purpose, or the warranty of non-infringement. Without limiting the foregoing, the developer of this software makes no warranty that: the software will meet your requirements, the software will be uninterrupted, timely, secure or error-free, the results that may be obtained from the use of the software will be effective, accurate or reliable, the quality of the software will meet your expectations, any errors in this software will be corrected. \n\nSoftware and its documentation made available here: could include technical or other mistakes, inaccuracies or typhographical errors. The developer of this software may make changes to the software or documentation, may be out of date, and the developer of this software makes no commitment to update such materials. The developer of this software assumes no responsibility for errors or ommisions in this software or documentation available. In no event shall the developer of this software be liable to you or any third parties for any special, punitive, incidental, indirect or consequential damages of any kind, or any damages whatsoever, including, without limitation, those resulting from loss of use, data or profits, whether or not the developer of this software has been advised of the possibility of such damages, and on any theory of liablity, arising out of or in connection with the use of this software. The use of this software is done at your own discretion and risk and with agreement that you will be solely responsible for any damage to your computer or mobile system or loss of data that results from such activities. No advice or information, whether oral of written, obtained by you from the developer of this software shall create any warranty for this software. \n\nTHE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE DEVELOPER OR AUTHOR OF THIS SOFTWARE BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABLITY, WHETHER IN AN ACION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. \n\nThe disclaimer of warranties and limitation of liability provided above shall be interpreted in a manner that, to the extent possible, most closely approximates an absolute disclaimer and waiver of all liability.</string>
    <string name="sources_and_information">Sources and more information:</string>
    <string name="data_loading_error_message">Unable to load data. Please restart the app.</string>
    <string name="share_app_preference">share_app_preference</string>
    <string name="rate_app_preference">rate_app_preference</string>
    <string name="about_preference">about_preference</string>
    <string name="turn_on_daily_notification">Turn on for daily information</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="share_the_app">Share the app</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="about">About</string>
    <string name="about_text">Must-Know Software Terms is an Android application which has a collection of software terms that developers at the start of their career would benefit knowing. It serves users important software terms and concepts to help them learn in a repetitive manner without getting into complex detail.\n\nThe aim of the application is not to cover a vast range of software terms, rather to focus on the basic and most common software terms encountered during software development. It gives a brief summary and a description of the main software terms. In case the users would like to have a more detailed understanding of the concept, the application provides necessary external sources. It also has favourite list feature which users can add terms to this list to create a shorter list of software terms which they would like to focus on. Besides that, with the optional daily notification feature users are presented with a random software term push notification every day.</string>
    <string name="share_this_app_with">Share this app with:</string>


</resources>
