<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:id="@+id/notification"
        android:defaultValue="false"
        android:key="@string/notification_preference"
        android:summary="@string/turn_on_daily_notification"
        android:title="@string/daily_notification"
        app:iconSpaceReserved="false" />
    <Preference
        android:id="@+id/info"
        android:key="@string/disclaimer_preference"
        android:title="@string/disclaimer"
        app:iconSpaceReserved="false" />
    <Preference
        android:id="@+id/share_app"
        android:key="@string/share_app_preference"
        android:title="@string/share_the_app"
        app:iconSpaceReserved="false" />

    <Preference
        android:id="@+id/rate_app"
        android:key="@string/rate_app_preference"
        android:title="@string/rate_the_app"
        app:iconSpaceReserved="false" />

    <Preference
        android:id="@+id/about"
        android:key="@string/about_preference"
        android:title="@string/about"
        app:iconSpaceReserved="false" />
</PreferenceScreen>